--- a/App/front-end/src/Core/RateReview/RateReview.css
+++ b/App/front-end/src/Core/RateReview/RateReview.css
@@ -167,6 +167,3 @@
     display: flex;
 }
 
-.space {
-    margin-top: 100px;
-}
